# happy-town

./: .gitignore  README.md
src/config/: secrets.env
src/db/postgres/: .env  docker-compose.yaml  start.sh
src/frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/frontend/src/: App.vue  config.ts  main.ts
src/frontend/src/Views/: CreateUserView.vue  HomeView.vue  UserView.vue
src/frontend/src/assets/: base.css  general.css  output.css
src/frontend/src/components/: CreateUserComponent.vue  UserComponent.vue
src/frontend/src/router/: index.ts
src/user_service/: Cargo.toml  Rocket.toml
src/user_service/src/: main.rs  user_endpoints.rs  users.rs
