[package]
name = "user_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["json","tls"] }
tokio = { version = "1.36.0"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.staging]
inherits = "dev"
